@@ -1,11 +1,8 @@
 package com.team.HoneyBadger.Service;
 
-import com.team.HoneyBadger.Exception.DataDuplicateException;
-import com.team.HoneyBadger.Exception.DataNotFoundException;
-import com.team.HoneyBadger.Exception.UnauthorizedException;
+import com.team.HoneyBadger.Exception.*;
 import com.team.HoneyBadger.DTO.*;
 import com.team.HoneyBadger.Entity.*;
-import com.team.HoneyBadger.Enum.EmailStatus;
 import com.team.HoneyBadger.Enum.KeyPreset;
 import com.team.HoneyBadger.Enum.MessageType;
 import com.team.HoneyBadger.HoneyBadgerApplication;
@@ -112,6 +109,7 @@ public class MultiService {
     }
 
     private UserResponseDTO getUserResponseDTO(SiteUser user) {
+        Optional<FileSystem> _fileSystem = fileSystemService.get(KeyPreset.USER_PROFILE.getValue(user.getUsername()));
         return UserResponseDTO.builder() //
                 .role(user.getRole().ordinal())//
                 .createDate(dateTimeTransfer(user.getCreateDate()))//
@@ -119,25 +117,70 @@ public class MultiService {
                 .phoneNumber(user.getPhoneNumber())//
                 .username(user.getUsername())//
                 .name(user.getName()) //
-                .url(null) //
+                .url(_fileSystem.map(FileSystem::getV).orElse(null)) //
                 .department(getDepartmentDTO(user.getDepartment())) //
                 .build();
+    }
+    public UserResponseDTO updateProfile(String username, MultipartFile file) throws IOException {
+        if (file == null || !file.getContentType().contains("image")) throw new InvalidFileTypeException("not image");
+        String key = KeyPreset.USER_PROFILE.getValue(username);
+        String path = HoneyBadgerApplication.getOsType().getLoc();
+        Optional<FileSystem> _fileSystem = fileSystemService.get(key);
+        if (_fileSystem.isPresent()) {
+            FileSystem fileSystem = _fileSystem.get();
+            File preFile = new File(path + fileSystem.getV());
+            if (preFile.exists()) deleteFileWithFolder(preFile);
+        }
+        UUID uuid = UUID.randomUUID();
+        String fileName = "/api/user/" + uuid.toString() + "." + (file.getOriginalFilename().contains(".") ? file.getOriginalFilename().split("\\.")[1] : "");// IMAGE
+        fileSystemService.save(key, fileName);
+        File dest = new File(path + fileName);
+        if (!dest.getParentFile().exists()) dest.getParentFile().mkdirs();
+        file.transferTo(dest);
+        SiteUser user = userService.get(username);
+        return getUserResponseDTO(user);
+    }
+
+    public UserResponseDTO deleteProfile(String username) {
+        String path = HoneyBadgerApplication.getOsType().getLoc();
+        Optional<FileSystem> _fileSystem = fileSystemService.get(KeyPreset.USER_PROFILE.getValue(username));
+        if (_fileSystem.isPresent()) {
+            FileSystem fileSystem = _fileSystem.get();
+            File file = new File(path + fileSystem.getV());
+            if (file.exists()) deleteFileWithFolder(file);
+            fileSystemService.deleteByKey(fileSystem);
+        }
+        SiteUser user = userService.get(username);
+        return getUserResponseDTO(user);
+    }
+
+    public UserResponseDTO getUser(String username) {
+        return getUserResponseDTO(userService.get(username));
+    }
+
+    public List<UserResponseDTO> getAllUser(String username) {
+        return userService.getUsernameAll(username).stream().map(this::getUserResponseDTO).toList();
+    }
+
+    public void changePassword(String username, PasswordChangeDTO passwordChangeDTO) {
+        SiteUser user = userService.get(username);
+        System.out.printf(passwordChangeDTO.prePassword() + " / " + passwordChangeDTO.newPassword() + " / " + user.getPassword());
+        if (!userService.isMatch(passwordChangeDTO.prePassword(), user.getPassword()))
+            throw new DataNotSameException("password");
+        userService.update(user, passwordChangeDTO.newPassword());
     }
 
     /*
      * Department
      */
     private DepartmentResponseDTO getDepartmentDTO(Department department) {
-        if (department == null)
-            return null;
+        if (department == null) return null;
         return DepartmentResponseDTO.builder().name(department.getName()).parent(appendParent(department.getParent())).build();
     }
 
     private DepartmentResponseDTO appendParent(Department now) {
-        if (now.getParent() == null)
-            return DepartmentResponseDTO.builder().name(now.getName()).build();
-        else
-            return DepartmentResponseDTO.builder().name(now.getName()).parent(appendParent(now.getParent())).build();
+        if (now.getParent() == null) return DepartmentResponseDTO.builder().name(now.getName()).build();
+        else return DepartmentResponseDTO.builder().name(now.getName()).parent(appendParent(now.getParent())).build();
     }
 
     /*
@@ -402,18 +445,43 @@ public class MultiService {
         return email.getId();
     }
 
-    public List<EmailResponseDTO> getEmailsForUser(String username, EmailStatus status) {
-        List<Email> emails = switch (status) {
-            case SENDER -> emailReceiverService.getSentEmailsForUser(username);
-            case RECEIVER -> emailReceiverService.getReceivedEmailsForUser(username);
-            case RESERVATION -> emailReceiverService.getReservedEmailsForUser(username);
-        };
-        return emails.stream().map(this::getEmailDTO).toList();
+    public Object getEmailsForUser(String username, int statusIndex) {
+//        List<?> emails;
+//        SENDER, RECEIVER, RESERVATION
+        switch (statusIndex) {
+            case 0:
+                List<Email> SenderEmail = emailReceiverService.getSentEmailsForUser(username);
+                return SenderEmail.stream().map(this::getEmailDTO).collect(Collectors.toList());
+            case 1:
+                List<Email> ReceiverEmail = emailReceiverService.getReceivedEmailsForUser(username);
+                return ReceiverEmail.stream().map(this::getEmailDTO).collect(Collectors.toList());
+            case 2:
+                List<EmailReservation> ReservationEmail = emailReservationService.getReservedEmailsForUser(username);
+                return ReservationEmail.stream().map(this::getEmailReservationDTO).collect(Collectors.toList());
+            default:
+                throw new IllegalArgumentException("Invalid status index: " + statusIndex);
+        }
     }
 
-    public Boolean markEmailAsRead(Long emailId, String receiverId) {
-        Boolean isRead = emailReceiverService.markEmailAsRead(emailId, receiverId);
-        return isRead;
+//    public Boolean markEmailAsRead(EmailReadRequestDTO emailReadRequestDTO) {
+//        Boolean isRead = emailReceiverService.markEmailAsRead(emailReadRequestDTO.emailId(), emailReadRequestDTO.receiverId());
+//        Email email = emailService.getEmail(emailReadRequestDTO.emailId());
+//        Optional<EmailReceiver> emailReceiver = emailReceiverService.getEmailReceiver(emailReadRequestDTO.emailId());
+//        emailReceiver.stat
+//        EmailResponseDTO emailResponseDTO = getEmailDTO(email);
+//        emailResponseDTO.isRead()
+//        return isRead;
+//    }
+
+    public EmailReceiverResponseDTO read(EmailReadRequestDTO emailReadRequestDTO) {
+        Boolean isRead = emailReceiverService.markEmailAsRead(emailReadRequestDTO.emailId(), emailReadRequestDTO.receiverId());
+        EmailResponseDTO emailResponseDTO = getEmailDTO(emailReadRequestDTO.emailId());
+        EmailReceiverResponseDTO emailReceiverResponseDTO = EmailReceiverResponseDTO.builder()
+                .id(emailResponseDTO.id())
+                .status(isRead)
+                .emailResponseDTO(emailResponseDTO)
+                .build();
+        return emailReceiverResponseDTO;
     }
 
     @Transactional
@@ -446,7 +514,7 @@ public class MultiService {
                         .map(er -> er.getReceiver().getUsername()) //
                         .toList()) //
                 .senderTime(this.dateTimeTransfer(email.getCreateDate())) //
-                .filePathList(filePathList) //
+                .files(filePathList) //
                 .build();
     }
 
@@ -504,26 +572,41 @@ public class MultiService {
     public EmailReservationResponseDTO updateEmailReservation(EmailReservationRequestDTO emailReservationRequestDTO, String username) {
         // 요청 DTO에서 ID를 사용하여 이메일 예약을 검색
         EmailReservation emailReservation = emailReservationService.getEmailReservation(emailReservationRequestDTO.id());
+
         // 예약의 발신자, 현재 사용자 username 일치 확인
         if (emailReservation != null && emailReservation.getSender().getUsername().equals(username)) {
+            // KeyPreset을 사용하여 keyValue 생성
             String keyValue = KeyPreset.EMAIL_RESERVATION_MULTI.getValue(emailReservationRequestDTO.id().toString());
+
+            // multiKey를 가져오거나, 없으면 새로 생성
             MultiKey multiKey = multiKeyService.get(keyValue).orElseGet(() -> multiKeyService.save(keyValue));
+
+            // 새로운 파일 경로 리스트 생성
             List<String> values = new ArrayList<>();
             for (String key : emailReservationRequestDTO.files()) {
                 Optional<FileSystem> _fileSystem = fileSystemService.get(key);
                 _fileSystem.ifPresent(fileSystem -> values.add(fileSystem.getV()));
             }
+
+            // 기존 multiKey의 keyValues를 순회하며, 파일 시스템에서 삭제
             for (String key : multiKey.getKeyValues()) {
                 Optional<FileSystem> _fileSystem = fileSystemService.get(key);
                 _fileSystem.ifPresent(fileSystemService::deleteByKey);
             }
+
+            // multiKey를 새로운 값들로 업데이트
             multiKeyService.updateAll(multiKey, values);
+
+            // 이메일 예약 정보 업데이트
             emailReservationService.update(emailReservation, emailReservationRequestDTO);
+
+            // 업데이트된 이메일 예약 정보를 바탕으로 DTO 반환
             return getEmailReservationDTO(emailReservation);
         } else {
             throw new UnauthorizedException("You are not authorized to update this reservation.");
         }
     }
+
     /*
      * Message or Chat
      */
@@ -634,14 +717,6 @@ public class MultiService {
     }
 
     /*
-     * Time
-     */
-
-    private Long dateTimeTransfer(LocalDateTime dateTime) {
-        return dateTime == null ? 0 : dateTime.atZone(ZoneId.systemDefault()).toInstant().toEpochMilli();
-    }
-
-    /*
      * MessageReservation or ChatReservation
      */
 
@@ -649,13 +724,7 @@ public class MultiService {
     public MessageReservationResponseDTO reservationMessage(MessageReservationRequestDTO messageReservationRequestDTO, String username) {
         Chatroom chatroom = chatroomService.getChatRoomById(messageReservationRequestDTO.chatroomId());
         SiteUser sender = userService.get(username);
-        MessageReservation messageReservation = MessageReservation.builder()
-                .chatroom(chatroom)
-                .message(messageReservationRequestDTO.message())
-                .sender(sender)
-                .sendDate(messageReservationRequestDTO.sendDate())
-                .messageType(messageReservationRequestDTO.messageType())
-                .build();
+        MessageReservation messageReservation = MessageReservation.builder().chatroom(chatroom).message(messageReservationRequestDTO.message()).sender(sender).sendDate(messageReservationRequestDTO.sendDate()).messageType(messageReservationRequestDTO.messageType()).build();
 
         messageReservationService.save(messageReservation);
         return getMessageReservation(messageReservation);
@@ -708,5 +777,24 @@ public class MultiService {
     public int alarmCount(Long chatroomId, Long endId) {
         List<Message> messageList = messageService.getUpdatedList(chatroomId, endId);
         return messageList.size()-1;
+    /*
+     * Time
+     */
+
+    private Long dateTimeTransfer(LocalDateTime dateTime) {
+        return dateTime == null ? 0 : dateTime.atZone(ZoneId.systemDefault()).toInstant().toEpochMilli();
+    }
+
+    /*
+     * File
+     */
+    public void deleteFileWithFolder(File file) {
+        if (file.exists()) {
+            if (file.isDirectory()) {
+                for (File list : file.listFiles())
+                    deleteFileWithFolder(list);
+            }
+            file.delete();
+        }
     }
 }
